--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install pytest and flake8
         run: |
-          pip insall pytest
+          pip install pytest
           pip install flake8
 
       - name: Run tests
